--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   #    -------firebase_core----------
-  firebase_core: ^2.15.0
-  firebase_auth: ^4.7.0
-  cloud_firestore: ^4.8.3
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.4
+  cloud_firestore: ^4.3.1
   firebase_storage: ^11.0.10
+  firebase_messaging: ^14.2.1
+  flutter_local_notifications: ^9.4.0
+#  flutter_local_notifications: ^16.2.0
 
-  #  -----------------bloc----------
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   dio: ^5.3.0
@@ -56,7 +58,6 @@ dependencies:
   lottie: ^1.2.1
   buildcondition: ^0.0.4
   image_picker: ^1.0.2
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
